Code committed for  decoupling of Sequence , Sequence Action and Action object.

--- a/src/aura/CadenceActions/CadenceActions.cmp
+++ b/src/aura/CadenceActions/CadenceActions.cmp
@@ -1,4 +1,4 @@
-<aura:component controller="CadenceActionsController" access="global">
+<aura:component controller="RDNACadence4.CadenceActionsController" access="global">
     <!-- init -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
     
@@ -12,7 +12,7 @@
     <!--priority list-->
     <aura:attribute name="pList" type="List"/>
     <!--Cadence Objects -->
-    <aura:attribute name="newCadence" type="RDNACadence2__Cadence__c" default="{ 'sobjectType': 'RDNACadence2__Cadence__c', 'Name': '','RDNACadence2__Record_Type__c':'', 'RDNACadence2__Participent_Activation__c':''}"/>
+    <aura:attribute name="newCadence" type="Sequence" default="{ 'sobjectType': 'Sequence' }"/>
     <!--CadenceAction List object list -Iterated to add multiple row(Multiple cadence actions) -->
     <aura:attribute name="cadenceActionList" type="List"/>
     <aura:attribute name="actionType" type="String"/>
@@ -27,7 +27,7 @@
     <aura:attribute name="isValidationError" type="boolean" default='false' />
     <aura:attribute name="ValidationError" type="String" default='Validation Error' />
     <!-- Handle event-->
-    <aura:handler name="cadDynamicRowEvent" event="RDNACadence2:CadDynamicRowEvent" action="{!c.handleCadDynamicRowEvent}"/>
+    <aura:handler name="cadDynamicRowEvent" event="RDNACadence4:CadDynamicRowEvent" action="{!c.handleCadDynamicRowEvent}"/>
     <aura:attribute name="entranceCriteriaSet" type="Object"/>
     <aura:attribute name="contactFieldList" type="List"/>
     <aura:attribute name="leadFieldList" type="List"/>
@@ -41,7 +41,7 @@
     <aura:attribute name="ISLoad" type="boolean" default="false"/>
     <aura:attribute name="UpdateFieldList" type="List"/>
     
-    <RDNACadence2:SpinnerComponent spinnerSync = "{!v.spinner}"/>
+    <RDNACadence4:SpinnerComponent spinnerSync = "{!v.spinner}"/>
     <div class = "slds-m-left_large">
         <div class = "slds-form-element slds-size_1-of-1  slds-m-bottom_large slds-m-top_medium " aura:id = "createTaskdiv">
             <p class="slds-page-header__row slds-truncate rdna-sub-header-bold slds-align_absolute-center" >Sequence Actions</p>
@@ -77,7 +77,7 @@
                         <aura:if isTrue="{! not(empty(v.actionList) || empty(v.actionTypeListForCadenceAction) )}">
                             <aura:if isTrue="{! v.ISLoad}">
                                 <aura:iteration items="{!v.cadenceActionList}" var="caObj" indexVar="index">
-                                    <c:CadenceActionsDetail aura:id="cadenceActionsDetailId" 
+                                    <RDNACadence4:CadenceActionsDetail aura:id="cadenceActionsDetailId" 
                                                                       UpdateFieldList="{!v.UpdateFieldList}" 
                                                                       cadenceAction="{!caObj}" 
                                                                       newCadence="{!v.newCadence}" 
@@ -126,7 +126,7 @@
             </div>
         </aura:if>
         <aura:if isTrue="{!v.createAction}">
-            <RDNACadence2:DynamicActionDetails aura:id="dynamicActionId" createAction="{!v.createAction}" actionTypeList="{!v.actionTypeList}" actionList ="{!v.actionList}" />
+            <RDNACadence4:DynamicActionDetails aura:id="dynamicActionId" createAction="{!v.createAction}" actionTypeList="{!v.actionTypeList}" actionList ="{!v.actionList}" />
         </aura:if>
     </div>
 </aura:component>
