--- a/src/aura/CadenceComponent/CadenceComponent.cmp
+++ b/src/aura/CadenceComponent/CadenceComponent.cmp
@@ -1,6 +1,5 @@
-<aura:component controller="RDNACadence.CadenceController" implements="force:appHostable,lightning:actionOverride,force:hasRecordId,flexipage:availableForRecordHome,flexipage:availableForAllPageTypes" access="global">
-    <aura:attribute name="cadence" type="RDNACadence__Cadence__c"  default="{ 'sobjectType': 'RDNACadence__Cadence__c',
-                                                               'Name': '','RDNACadence__Record_Type__c':'', 'RDNACadence__Participent_Activation__c':''}"/>
+<aura:component controller="RDNACadence4.CadenceController" implements="force:appHostable,lightning:actionOverride,force:hasRecordId,flexipage:availableForRecordHome,flexipage:availableForAllPageTypes" access="global">
+    <aura:attribute name="cadence" type="Sequence"  default="{ 'sobjectType': 'Sequence'}"/>
     <!-- Cadence Id -->
     <aura:attribute name="recordId" type="String" />
     <aura:handler name="init" action="{!c.doInit}" value="{!this}"/> 
@@ -43,15 +42,15 @@
     <aura:if isTrue="{!v.isEdit}"><!-- open in new/edit mode -->        
          <aura:if isTrue="{!not(empty(v.entranceCriteriaSet) || empty(v.exitCriteriaSet)	
                          )}"><!-- open in edit mode -->
-            <c:CadenceProgressIndicator newCadence = "{!v.cadence}" 
+            <RDNACadence4:CadenceProgressIndicator newCadence = "{!v.cadence}" 
                                         AllFieldList = "{!v.AllFieldList}"   
-                                        cadenceName="{!v.cadence.Name}" entranceCriteriaSet="{!v.entranceCriteriaSet}"
+                                        cadenceName="{!v.cadence.name}" entranceCriteriaSet="{!v.entranceCriteriaSet}"
                                         exitCriteriaSet="{!v.exitCriteriaSet}" currentStep="{!v.currentStep}"
                                         cadenceActionList="{!v.cadenceActionList}" accountFieldList="{!v.accountFieldList}"
                                         dbFieldList="{!v.dbFieldList}" themeName="{!v.themeName}"
                                         isEdit = "{!v.isEdit}" />
             <aura:set attribute="else"><!-- open in new mode -->
-                <c:CadenceProgressIndicator newCadence = "{!v.cadence}" 
+                <RDNACadence4:CadenceProgressIndicator newCadence = "{!v.cadence}" 
                                                       AllFieldList = "{!v.AllFieldList}"   
                                                       newSequence = "{!v.newSequence}"
                                                       settedSequenceType="{!v.settedSequenceType}"
@@ -65,7 +64,7 @@
             
             <aura:if isTrue="{!not(empty(v.entranceCriteriaSet) || empty(v.exitCriteriaSet) 
                              || empty(v.cadence) )}">
-                <c:CadenceTabset aura:id ='tabset' newCadence = "{!v.cadence}"  
+                <RDNACadence4:CadenceTabset aura:id ='tabset' newCadence = "{!v.cadence}"  
                                  AllFieldList = "{!v.AllFieldList}"  
                                  contactFieldList="{!v.contactFieldListCA}" leadFieldList="{!v.leadFieldListCA}"
                                  entranceCriteriaSet="{!v.entranceCriteriaSet}" exitCriteriaSet="{!v.exitCriteriaSet}" 
