--- a/src/aura/CriterionComponent/CriterionComponent.cmp
+++ b/src/aura/CriterionComponent/CriterionComponent.cmp
@@ -1,5 +1,5 @@
 <aura:component controller="CriteriaController" access="global">
-    <aura:attribute name="cadence" type="RDNACadence__Cadence__c"/>
+    <aura:attribute name="cadence" type="Sequence"/>
     <aura:attribute name="criteriaSet" type="Object" default="
                                                               {
                                                               'criterionPriorityFormula': '',
@@ -28,7 +28,7 @@
     <aura:method name="validateCriterion" action="{!c.validateCriterion}" access="public" />
     
     <aura:handler name="init" action="{!c.doInit}" value="{!this}"/>
-    <aura:handler name="DynamicFieldRowEvent" event="RDNACadence:DynamicFieldRowEvent" action="{!c.handleDynamicRowEvent}"/>
+    <aura:handler name="DynamicFieldRowEvent" event="RDNACadence4:DynamicFieldRowEvent" action="{!c.handleDynamicRowEvent}"/>
     <fieldset class="slds-form-element slds-form_compound">
         <form class="slds slds-form slds-m-left_large">
             <div class="slds-size_1-of-1" >
@@ -58,8 +58,8 @@
                             <aura:if isTrue="{!not(empty(v.AllFieldList)) || v.isViewMode}">
                                     <aura:if isTrue="{!not( empty(v.criteriaList))}">
                                         <aura:iteration items="{!v.criteriaList}" var="criteria" indexVar="index">
-                                            <c:DynamicFieldRow aura:id="dynamicRow" isViewMode="{!v.isViewMode}" objectInstance="{!criteria}" 
-                                                                         fieldList="{!v.accountFieldList}" rowIndex = "{!index}" listPicklistValues="" fieldDataType = "" recordType="{!v.cadence.RDNACadence2__Record_Type__c}"
+                                            <RDNACadence4:DynamicFieldRow aura:id="dynamicRow" isViewMode="{!v.isViewMode}" objectInstance="{!criteria}" 
+                                                                         fieldList="{!v.accountFieldList}" rowIndex = "{!index}" listPicklistValues="" fieldDataType = "" recordType="{!v.cadence.recordType}"
                                                                          AllFieldList = "{!v.AllFieldList}"  />
                                         </aura:iteration>
                                     </aura:if>
@@ -79,7 +79,7 @@
                 <div class="" >
                     <div class="slds-size_1-of-1">
                         <aura:if isTrue="{!v.criteriaSet}">
-                            <RDNACadence:ConditionLogic aura:id="customLogic" isViewMode="{!v.isViewMode}" criteriaType="{!v.criteriaType}" selectedCondition="{!v.criteriaSet.condition}" criterionPriorityFormula="{!v.criteriaSet.criterionPriorityFormula}" criteriaListCount="{!v.criteriaListCount}"/>
+                            <RDNACadence4:ConditionLogic aura:id="customLogic" isViewMode="{!v.isViewMode}" criteriaType="{!v.criteriaType}" selectedCondition="{!v.criteriaSet.condition}" criterionPriorityFormula="{!v.criteriaSet.criterionPriorityFormula}" criteriaListCount="{!v.criteriaListCount}"/>
                         </aura:if>
                     </div>
                 </div>
