Made little bit changes

--- a/src/aura/CadenceActionsDetail/CadenceActionsDetail.cmp
+++ b/src/aura/CadenceActionsDetail/CadenceActionsDetail.cmp
@@ -215,11 +215,11 @@
                                 <div class = "slds-form-element slds-size_1-of-1 slds-p-bottom_large" >
                                     <!--<aura:iteration items="{!v.rowToCreateFieldsToUpdate}" var="wrapperObj" indexVar="index">                                        
                                         <div class = "slds-form-element__row slds-size_1-of-1">
-                                            <aura:if isTrue="{!'Lead' ==  v.newCadence.RDNACadence4__Record_Type__c}">
-                                                <RDNACadence4:ActionDetailsDynamicRow aura:id="dynamicROw" recordType="{!v.newCadence.RDNACadence4__Record_Type__c}"
+                                            <aura:if isTrue="{!'Lead' ==  v.newCadence.recordType}">
+                                                <RDNACadence4:ActionDetailsDynamicRow aura:id="dynamicROw" recordType="{!v.newCadence.recordType}"
                                                                                      taskObj="{!wrapperObj}" wrapperTaskFields="{!v.wrapperLeadFields}" currentIndex = "{!index}" isrequired="true" isDisabled="{!v.isDisabled}"/>
                                                 <aura:set attribute="else">
-                                                    <RDNACadence4:ActionDetailsDynamicRow aura:id="dynamicROw" recordType="{!v.newCadence.RDNACadence4__Record_Type__c}"
+                                                    <RDNACadence4:ActionDetailsDynamicRow aura:id="dynamicROw" recordType="{!v.newCadence.recordType}"
                                                                                          taskObj="{!wrapperObj}" wrapperTaskFields="{!v.wrapperContactFields}" currentIndex = "{!index}" isrequired="true" isDisabled="{!v.isDisabled}"/>
                                                 </aura:set>
                                             </aura:if>
